crates/core/tests/snapshots/snapshot__cascade_inheritance.snap
---
source: yio_core/tests/snapshot.rs
expression: json
---
[
  {
    "node_id": 4097,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      1.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 0,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "image_path": null,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 8193,
    "parent_id": 4097,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      1.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            -3.0,
            23.416666
          ],
          [
            16.166666,
            23.416666
          ],
          [
            16.166666,
            -2.0
          ],
          [
            -3.0,
            -2.0
          ],
          [
            10.0,
            23.416666
          ],
          [
            22.083332,
            23.416666
          ],
          [
            22.083332,
            -2.0
          ],
          [
            10.0,
            -2.0
          ]
        ],
        "uvs": [
          [
            0.0,
            0.014892578
          ],
          [
            0.011230469,
            0.014892578
          ],
          [
            0.011230469,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.011230469,
            0.014892578
          ],
          [
            0.018310547,
            0.014892578
          ],
          [
            0.018310547,
            0.0
          ],
          [
            0.011230469,
            0.0
          ]
        ],
        "colors": [
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ],
          [
            1.0,
            0.0,
            0.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "image_path": "yio://font-atlas/p0",
        "program": 1,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  }
]
