crates/core/tests/snapshots/snapshot__simple_panel.snap
---
source: yio_core/tests/snapshot.rs
expression: json
---
[
  {
    "node_id": 4097,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      1.0,
      1.0,
      1.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ],
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            30.0
          ],
          [
            0.0,
            30.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "image_path": null,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 12289,
    "parent_id": 8193,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 2,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            -4.0,
            18.666668
          ],
          [
            14.0,
            18.666668
          ],
          [
            14.0,
            -1.0
          ],
          [
            -4.0,
            -1.0
          ],
          [
            7.0,
            19.333334
          ],
          [
            16.666668,
            19.333334
          ],
          [
            16.666668,
            -1.0
          ],
          [
            7.0,
            -1.0
          ],
          [
            10.0,
            19.333334
          ],
          [
            23.666668,
            19.333334
          ],
          [
            23.666668,
            -0.0
          ],
          [
            10.0,
            -0.0
          ],
          [
            18.0,
            19.333334
          ],
          [
            27.666668,
            19.333334
          ],
          [
            27.666668,
            -1.0
          ],
          [
            18.0,
            -1.0
          ],
          [
            21.0,
            19.333334
          ],
          [
            37.333336,
            19.333334
          ],
          [
            37.333336,
            2.0
          ],
          [
            21.0,
            2.0
          ]
        ],
        "uvs": [
          [
            0.0,
            0.014404297
          ],
          [
            0.013183594,
            0.014404297
          ],
          [
            0.013183594,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.013183594,
            0.014892578
          ],
          [
            0.020263672,
            0.014892578
          ],
          [
            0.020263672,
            0.0
          ],
          [
            0.013183594,
            0.0
          ],
          [
            0.020263672,
            0.014160156
          ],
          [
            0.030273438,
            0.014160156
          ],
          [
            0.030273438,
            0.0
          ],
          [
            0.020263672,
            0.0
          ],
          [
            0.030273438,
            0.014892578
          ],
          [
            0.037353516,
            0.014892578
          ],
          [
            0.037353516,
            0.0
          ],
          [
            0.030273438,
            0.0
          ],
          [
            0.037353516,
            0.0126953125
          ],
          [
            0.049316406,
            0.0126953125
          ],
          [
            0.049316406,
            0.0
          ],
          [
            0.037353516,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7,
          8,
          9,
          10,
          8,
          10,
          11,
          12,
          13,
          14,
          12,
          14,
          15,
          16,
          17,
          18,
          16,
          18,
          19
        ],
        "image_path": "yio://font-atlas/p0",
        "program": 1,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 16385,
    "parent_id": 4097,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 3,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            38.0
          ],
          [
            100.0,
            38.0
          ],
          [
            100.0,
            78.0
          ],
          [
            0.0,
            78.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "image_path": null,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 20481,
    "parent_id": 16385,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 4,
    "change_level": "Full",
    "reuse_key": 0,
    "effect": {
      "outline_width": 0.0,
      "outline_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "underlay": [
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        },
        {
          "offset_x": 0.0,
          "offset_y": 0.0,
          "softness": 0.0,
          "color": [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        }
      ],
      "glow_power": 0.0,
      "glow_color": [
        0.0,
        0.0,
        0.0,
        0.0
      ],
      "blur_width": 0.0
    },
    "payload": {
      "Mesh": {
        "verts": [
          [
            35.0,
            57.333336
          ],
          [
            54.0,
            57.333336
          ],
          [
            54.0,
            37.0
          ],
          [
            35.0,
            37.0
          ],
          [
            49.0,
            56.666668
          ],
          [
            66.333336,
            56.666668
          ],
          [
            66.333336,
            37.0
          ],
          [
            49.0,
            37.0
          ]
        ],
        "uvs": [
          [
            0.049316406,
            0.014892578
          ],
          [
            0.06323242,
            0.014892578
          ],
          [
            0.06323242,
            0.0
          ],
          [
            0.049316406,
            0.0
          ],
          [
            0.06323242,
            0.014404297
          ],
          [
            0.075927734,
            0.014404297
          ],
          [
            0.075927734,
            0.0
          ],
          [
            0.06323242,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "image_path": "yio://font-atlas/p0",
        "program": 1,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  }
]
